tests/should_fail/match_string_pattern_on_int2.nv
module test
// match: String literal pattern on Int type
fn bad(n: Int) -> String {
    return match n {
        "hello" => "yes",
        _       => "no"
    }
}
